# dirty-linux-experiments

./: CMakeLists.txt  README.md  go.mod  go.sum
c++-function-static/: main.cpp
c++impl/: CMakeLists.txt  copy_ellision.cpp
c++sfinae/: CMakeLists.txt  sfinae.cpp
c++template/: format_string.cpp
c++ub/: CMakeLists.txt  act_an_ub.sh  infinite-loop-without-side-effects.cpp  signed_int_overflow.cpp  ub1.cpp
c++ub/one_definition_rule/: compilation_unit1.cpp  compilation_unit2.cpp
cpp-core-guidelines-learning/: ctors.cpp  pure_function.cpp
cxx11-abi/: CMakeLists.txt  amd64-cc.cpp  big.cpp  big2.cpp
cxx11-function-static-var/: test.cpp
debug/: CMakeLists.txt
debug/src/: rng.cpp  unexpected_write.cpp  use-after-free.cpp  watchpoint.cpp
dso/: CMakeLists.txt  common_variable.c  common_variable.h  common_variable2.c  hidden.c
effective-modern-c++/: CMakeLists.txt  c++-type-deduce.cpp  eat-cpu.cpp  object-slicing.cpp  pass-by-value-vs-pass-by-universal-reference.cpp  prvalue-copy-ellision.cpp  sizeof.cpp  value-categories.cpp
gcc-visibility/: play  test.cpp  version_script
golang-http/: go.sum
golang-http/client/: client.go
golang-http/default/: default.go
golang-http/fasthttpserver/: server.go
golang-http/stats/: stats.go
iob/: go.mod  main.go
iob/bench/: bench.go
isoc++/: value_category.cpp
ld/: Makefile  fakelib2.c  lib1.c  main.c
libclang-find-usage/: CMakeLists.txt
libclang-find-usage/include/cfu/utils/: source_file.hpp
libclang-find-usage/include/cfu/visitors/: find_by_location.hpp  find_usages.hpp
libclang-find-usage/src/: plugin.cpp
libclang-find-usage/src/visitors/: find_usages.cpp
linkers/multiple-defs-static-lib/: a.cpp  aa.cpp  b.cpp  c.cpp  clean.sh  compile.sh  main.cpp  shared.cpp
linux-futex/: futex_demo.c
linux-graphics/: fb.cpp
linux-timers/: CMakeLists.txt  timer.cpp
misc/: CMakeLists.txt  decomposefilt.cpp  libprime.hpp  prime.cpp
nccl-ompi/: CMakeLists.txt  Dockerfile  allreduce.cu  allreduce.h  build.sh  check.h  main.cpp  mmpl_main.cu  sgd.cpp
no-plt/: Makefile  test.c
optimizer/: ecs.js  instancePrice.csv  package-lock.json  simple.py
optimizing-c++/: CMakeLists.txt  README.md  data_dependency.c  dd.S  print.c  print.cpp
optimizing-c++/add_no_data_dependency/: dd.S  decode_gen.py  print.cpp
optimizing-c++/avx/: avx.S  avx.cpp  generate_avx.py
optimizing-c++/avx_memory_move/: avx_memory_move.S  avx_memory_move.cpp  generate_avx_memory_move.py
optimizing-c++/backend/: memcpy_bench.cpp  memory_move.S  memory_move.cpp
optimizing-c++/branches/: branches.S  branches.cpp  generate.py
optimizing-c++/htt/: htt.cpp
optimizing-c++/utils/: scan.hpp
optimizing-cuda/: CMakeLists.txt  gemm.cpp
rust/abi/: foo.rs
seaweedfs-opencv-bench/: CMakeLists.txt  pack.sh
seaweedfs-opencv-bench/utils/: http.cpp  http.h
sgd-comm/: CMakeLists.txt  asgd.cpp  cache.cpp  cache.hpp  cache_test.cpp  distributedhash.c  functions.cpp  functions.h  mpi_win.cpp  sgd_comm.cpp  test_hash.cpp
sgd-comm/src/: net.cpp  net.h  tensor.cpp  tensor.h
sgd-comm/src/functions/: data.cpp  data.h  function.h  inner_product.cpp  inner_product.h  loss.cpp  loss.h  pure.h
sgd-comm/src/utils/: benchmark.cpp  benchmark.h  endian.h
thread/: CMakeLists.txt  thread_bug.cpp
weak-symbol/: add_optimized.c
week-symbol/: CMakeLists.txt  add.c  main.c
