cmake_minimum_required(VERSION 3.11)
project(exps)

set(CMAKE_CXX_STANDARD 20)
add_subdirectory(optimizing-c++)
if (ENABLE_CUDA)
    add_subdirectory(optimizing-cuda)
endif()
add_subdirectory(debug)
add_subdirectory(thread)
add_subdirectory(c++ub)
add_subdirectory(c++impl)
add_subdirectory(misc)
add_subdirectory(linux-timers)
add_subdirectory(effective-modern-c++)
add_subdirectory(c++sfinae)
