add_executable(c++-type-deduce c++-type-deduce.cpp)
add_executable(sizeof sizeof.cpp)
add_executable(eat-cpu eat-cpu.cpp)
target_link_libraries(eat-cpu PRIVATE pthread)
add_executable(value-categories value-categories.cpp)
add_executable(pass-by-value-vs-pass-by-universal-reference pass-by-value-vs-pass-by-universal-reference.cpp)
add_executable(prvalue-copy-ellision prvalue-copy-ellision.cpp)
add_executable(object-slicing object-slicing.cpp)